# Pico-RJ45-Sock

firmware/spdif/: CMakeLists.txt  LICENSE  arp.c  arp.h  eth.c  eth.h  hwinit.c  main.c  rx890x_i2c.c  rx890x_i2c.h  ser_10base_t.pio  spdif_rx.c  spdif_rx.h  spdif_rx_capture.pio  system.h  udp.c  udp.h
firmware/spdif/scripts/: gen_pio_by_freq.py
